# grappler

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
grappler-core/: Cargo.toml
grappler-core/src/: lib.rs
grappler-macros/: Cargo.toml
grappler-macros/src/: lib.rs
src/: lib.rs
tests/: hook_tests.rs
tests/macros/: basic.rs  empty-signature-fail.rs  empty-signature-fail.stderr  retain-privateness-fail.rs  retain-privateness-fail.stderr  signature-no-known-bytes-fail.rs  signature-no-known-bytes-fail.stderr
