[package]
name = "grappler"
version = "0.1.6"
description = "Easy-to-use function hooking through proc-macros"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[workspace]
members = [ 
  "grappler-macros",
  "grappler-core"
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/SkyLeite/grappler"
authors = [
  "Sky Leite <sky@leite.dev>"
]

[dependencies]
grappler-core = { path = "./grappler-core", version = "0.1.6" }
grappler-macros = { path = "./grappler-macros", version = "0.1.6" }

[dev-dependencies]
trybuild = "1.0.96"
