[package]
name = "grappler-core"
version = "0.1.2"
description = "Core implementation of the `grappler` crate."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
retour = { version = "0.3.1", features = ["static-detour"] }
skidscan = "2.0.1"
