[package]
name = "grappler-macros"
version = "0.1.1"
description = "Macros of the `grappler` crate."
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
grappler-core = { path = "../grappler-core", version = "0.1.0" }
Inflector = "0.11.4"
darling = "0.20.9"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
